add basic login functionality
